# src/swagger.json
@@ -1606,6 +1606,10 @@
                       "South"
                     ],
                     "example": "North"
+                  },
+                  "isRead": {
+                    "type": "boolean",
+                    "example": "false"
                   }
                 }
               }
@@ -1656,6 +1660,43 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/api/v1/landowner/{id}": {
+      "put": {
+        "tags": [
+          "Landowner"
+        ],
+        "description": "Update as read",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/v1/buyer/": {
@@ -1764,6 +1805,10 @@
                   "parkingSize": {
                     "type": "integer",
                     "example": 10
+                  },
+                  "isRead": {
+                    "type": "boolean",
+                    "example": "false"
                   }
                 }
               }
@@ -1814,6 +1859,43 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/api/v1/buyer/{id}": {
+      "put": {
+        "tags": [
+          "Buyer"
+        ],
+        "description": "Update as read",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api/v1/image/": {
@@ -1965,6 +2047,10 @@
                     "type": "string",
                     "minLength": 200,
                     "example": "build my building carefully"
+                  },
+                  "isRead": {
+                    "type": "boolean",
+                    "example": "false"
                   }
                 }
               }
@@ -2015,6 +2101,43 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/api/v1/contact/{id}": {
+      "put": {
+        "tags": [
+          "Contact"
+        ],
+        "description": "Update as read",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
